Adding pages & CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hi
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
+    <title>Andrew Sacher</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162345299-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-162345299-1');
+		</script> -->
+  </head>
+  <body>
+    <div class="nav">
+      <span class="nav-title"><a href="">Andrew Sacher</a></span>
+      <div class="nav-links">
+        <a href="work.html">Work</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </div>
+    <div class="container">
+      <div>
+        <img class="andrew-img" src="img/andrew.jpeg" alt="Andrew Sacher" />
+      </div>
+      <div>
+        <div class="container-text">
+          <span>Hey, I'm Andrew</span>
+          <br /><br />
+          <span
+            >Senior Editor at
+            <a href="www.brooklynvegan.com">BrooklynVegan</a></span
+          >
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
