--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <title>Andrew Sacher - About</title>
+    <link rel="icon" type="image/x-icon" href="img/AS.ico">
   </head>
   <body>
     <div class="nav">
