--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
+    <link rel="icon" type="image/x-icon" href="img/AS.ico">
     <title>Andrew Sacher - Contact</title>
   </head>
   <body>
