--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <title>Andrew Sacher - Work</title>
-    <link rel="icon" type="image/x-icon" href="img/AS.ico">
+    <link rel="icon" type="image/x-icon" href="img/AS.ico" />
   </head>
   <body>
     <div class="nav">
@@ -29,43 +29,359 @@
           href="https://www.brooklynvegan.com/tags/in-defense-of-the-genre"
           target="_blank">
           In Defense of the Genre</a
-        >.
+        >. <br /><br />
+        <!-- <span class="title">Other Highlights</span>
         <br />
-        <br />
-        <br />
-        <br />
-        <span class="title">Other Highlights</span>
-        <br />
-        <br />
-        <span class="sub-title">Writing</span><br />
-        <span>
-          <a
-            href="https://www.brooklynvegan.com/beach-boys-albu/"
-            target="_blank">
-            The Beach Boys Albums Ranked
-          </a>
-        </span>
-        <br />
-        <span>
-          <a
-            href="https://www.brooklynvegan.com/the-unraveling-of-puptheband-how-pup-reinvented-themselves-in-the-most-pup-way-possible/"
-            target="_blank">
-            PUP interview
-          </a>
-        </span>
-        <br />
-        <span>
-          <a
-            href="https://www.brooklynvegan.com/how-a-never-hungover-again-outtake-and-a-text-about-sublime-led-to-joyce-manors-new-lp/"
-            target="_blank">
-            Joyce Manor interview
-          </a>
-        </span>
-        <br />
-        <br />
-        <br />
-        <span class="sub-title">Audio / Video</span><br />
-        <!-- <span>
+        <br /> -->
+        <div class="link-list">
+          <span class="sub-title">Interviews/Features</span><br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/bad-brains-interview-darryl-jenifer-discusses-the-bands-classic-80s-records/"
+              target="_blank">
+              Bad Brains interview: Darryl Jenifer discusses the band's classic
+              '80s records
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/scowl-reintroduce-themselves-with-remarkable-new-ep-i-wanna-be-a-hardcore-kid-writing-pop-songs/"
+              target="_blank">
+              Scowl interview: "I wanna be a hardcore kid writing pop songs"
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/the-wonder-years-on-fatherhood-mark-hoppus-and-making-a-record-thats-riyl-the-wonder-years/"
+              target="_blank">
+              The Wonder Years on fatherhood, Mark Hoppus, and making a record
+              that's RIYL The Wonder Years
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/the-interrupters-helped-re-popularize-ska-punk-now-theyve-made-the-most-personal-album-of-their-career/"
+              target="_blank">
+              The Interrupters helped re-popularize ska-punk. Now they've made
+              the most personal album of their career
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/the-callous-daoboys-mathcore-is-for-everyone-i-dont-want-to-be-this-middling-heavy-band-i-wanna-be-the-1975/"
+              target="_blank">
+              The Callous Daoboys interview: "I don't want to be this middling
+              heavy band, I wanna be The 1975"
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/soul-glo-are-paving-the-path-to-punks-future-interview/"
+              target="_blank">
+              Soul Glo are paving the path to punk's future
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/the-unraveling-of-puptheband-how-pup-reinvented-themselves-in-the-most-pup-way-possible/"
+              target="_blank">
+              PUP interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/how-a-never-hungover-again-outtake-and-a-text-about-sublime-led-to-joyce-manors-new-lp/"
+              target="_blank">
+              Joyce Manor interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/david-crosby-talks-new-lp-trump-paul-kantner-the-psychedelic-label-more/"
+              target="_blank">
+              David Crosby interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/circa-survives-anthony-green-talks-musical-departure-of-new-ep-a-dream-about-love/"
+              target="_blank">
+              Anthony Green (Circa Survive) interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/qa-mewithoutyou-grew-faced-turmoil-and-made-their-best-album-in-years/"
+              target="_blank">
+              mewithoutYou grew, faced turmoil, and made their best album in
+              years
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/manchester-orchestra-interview-andy-hull-talks-creative-rebirth-and-the-million-masks-of-god/"
+              target="_blank">
+              Manchester Orchestra interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/an-interview-w-meat-puppets-on-original-lineup-reunion-new-album-more/"
+              target="_blank">
+              Meat Puppets interview
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/qa-w-foxing-on-the-masterful-art-rock-of-new-album-nearer-my-god/"
+              target="_blank">
+              Interview with Foxing on 'Nearer My God'
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/qas-with-mike-tim-kinsella-on-capn-jazz-reunion-american-football-riot-fest-more/"
+              target="_blank">
+              Interviews with Mike & Tim Kinsella on Cap'n Jazz, American
+              Football & more
+            </a>
+          </span>
+          <br />
+          <br />
+          <br /><br />
+          <span class="sub-title">Album Retrospectives</span><br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/beach-boys-albu/"
+              target="_blank">
+              The Beach Boys Albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/sing-the-sorrow-at-20-the-lp-that-took-afi-from-hardcore-to-generation-defining-rock-band/"
+              target="_blank">
+              AFI's 'Sing the Sorrow' at 20
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/title-fights-floral-green-at-10-the-story-behind-a-landmark-of-modern-punk-hardcore/"
+              target="_blank">
+              Title Fight's 'Floral Green' at 10 - the story behind a landmark
+              of modern punk & hardcore
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/box-car-racer-turns-20-a-look-back-on-blink-182s-crucial-post-hardcore-side-project/"
+              target="_blank">
+              Box Car Racer turns 20: a look back on blink-182's crucial post-hardcore side project
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/taking-back-sundays-tell-all-your-friends-turns-20-a-look-back-on-the-emo-landmark/"
+              target="_blank">
+              Taking Back Sunday's 'Tell All Your Friends' at 20
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/every-time-i-die-album-guide-a-look-back-at-20-years-of-metalcore-innovation/"
+              target="_blank">
+              Every Time I Die: a look back at 20+ years of metalcore innovation
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/bleed-american-turns-20-a-look-back-on-jimmy-eat-worlds-great-big-american-rock-record/"
+              target="_blank">
+              Jimmy Eat World's 'Bleed American' at 20
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/blink-182s-take-off-your-pants-and-jacket-turns-20-the-tense-turning-point-of-their-peak-era/"
+              target="_blank">
+              blink-182's 'Take Off Your Pants and Jacket' turns 20 - the tense turning point of their peak era
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/thursdays-full-collapse-turns-20-a-look-back-on-the-pivotal-post-hardcore-classic/"
+              target="_blank">
+              Thursday's 'Full Collapse' at 20
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/american-footballs-highly-influential-debut-album-turns-20/"
+              target="_blank">
+              American Football's LP1 at 20
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/minus-the-bear-albums-ranked-from-worst-to-best/"
+              target="_blank">
+              Minus The Bear albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/every-mewithoutyou-album-ranked/"
+              target="_blank">
+              mewithoutYou albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/rancid-albums-ranked-worst-to-best/"
+              target="_blank">
+              Rancid albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/black-flag-albums-and-eps-ranked-worst-to-best/"
+              target="_blank">
+              Black Flag albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/blink-182-albums-ranked-worst-to-best/"
+              target="_blank">
+              blink-182 albums ranked
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/paramore-album-guide-a-look-back-on-5-albums-of-unique-evolution/"
+              target="_blank">
+              Paramore album guide
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/unpopular-opinion-green-days-insomniac-is-their-best-album/"
+              target="_blank">
+              'Insomniac' is Green Day's best album
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/we-reviewed-all-101-songs-on-short-music-for-short-people-for-its-21st-bday-because-quarantine/"
+              target="_blank">
+              All 101 songs on 'Short Music For Short People,' reviewed
+            </a>
+          </span>
+          <br /><br />
+          <br /><br />
+          <span class="sub-title">Other Articles/Lists</span><br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/ska-is-thriving-right-now-heres-a-look-at-the-diy-scene-thats-keeping-it-alive/"
+              target="_blank">
+              Ska is thriving right now. Here's a look at the DIY scene that's
+              keeping it alive
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/the-road-to-glow-on-a-guide-to-turnstiles-back-catalog/"
+              target="_blank">
+              The road to 'Glow On' - a guide to Turnstile's back catalog
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/10-years-ago-the-new-wave-of-post-hardcore-made-its-mark/"
+              target="_blank">
+              10 years ago, the new wave of post-hardcore made its mark
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/15-80s-punk-albums-that-shaped-the-90s00s-pop-punk-boom/"
+              target="_blank">
+              15 '80s punk albums that shaped the '90s/'00s pop punk boom
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/emo-revival/"
+              target="_blank">
+              'Emo Revival' & how 'Indie Rock' was already 'Emo' (or vice versa)
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/12-classic-ska-punk-albums-to-prepare-for-you-the-impending-ska-punk-revival/"
+              target="_blank">
+              12 classic ska-punk albums to prepare you for the ska-punk revival
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/100-best-punk-emo-albums-of-the-2010s/"
+              target="_blank">
+              100 Best Punk & Emo Albums of the 2010s
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://www.brooklynvegan.com/a-look-back-on-10-classic-pop-punk-bands-mature-albums/"
+              target="_blank">
+              A look back on 10 classic pop punk bands' "mature" albums
+            </a>
+          </span>
+          <br />
+          <br />
+          <br /><br />
+
+          <span class="sub-title">Audio/Video</span><br /><br />
+
+          <!-- <span>
           <a
             href="https://www.brooklynvegan.com/tags/vans-channel-66/"
             target="_blank"
@@ -73,13 +389,14 @@
             Vans Channel 66
           </a>
         </span>
-        <br /> -->
-        <span>
-          <a href="https://brooklynvegan.podbean.com/" target="_blank">
-            The BrooklynVegan Show Podcast
-          </a>
-        </span>
-        <br />
+        <br /><br /> -->
+          <span>
+            <a href="https://brooklynvegan.podbean.com/" target="_blank">
+              The BrooklynVegan Show Podcast
+            </a>
+          </span>
+          <br /><br />
+        </div>
       </div>
     </div>
   </body>
