--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="icon" type="image/x-icon" href="img/AS.ico">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
+    <link rel="icon" type="image/x-icon" href="img/AS.ico" />
     <title>Andrew Sacher</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162345299-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WJRW9C2ZX8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-		  gtag('config', 'UA-162345299-1');
-		</script> -->
+      gtag('config', 'G-WJRW9C2ZX8');
+    </script>
   </head>
   <body>
     <div class="nav">
@@ -37,7 +39,9 @@
           <span>
             I'm a music and culture writer currently living in New York and a
             Senior Editor at
-            <a href="https://www.brooklynvegan.com" target="_blank">BrooklynVegan</a>.
+            <a href="https://www.brooklynvegan.com" target="_blank"
+              >BrooklynVegan</a
+            >.
           </span>
         </div>
       </div>
