Navbar changes, work changes

--- a/about.html
+++ b/about.html
@@ -4,7 +4,23 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <title>Andrew Sacher - About</title>
-    <link rel="icon" type="image/x-icon" href="img/AS.ico">
+    <link rel="icon" type="image/x-icon" href="img/AS.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Geologica" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WJRW9C2ZX8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-WJRW9C2ZX8');
+    </script>
   </head>
   <body>
     <div class="nav">
@@ -16,9 +32,7 @@
       </div>
     </div>
     <div class="container">
-      <div>
-        Coming soon
-      </div>
+      <div>Coming soon</div>
     </div>
   </body>
 </html>
