--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,22 @@
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <link rel="icon" type="image/x-icon" href="img/AS.ico">
     <title>Andrew Sacher - Contact</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Geologica" />
+          <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WJRW9C2ZX8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-WJRW9C2ZX8');
+    </script>
   </head>
   <body>
     <div class="nav">
