--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="icon" type="image/x-icon" href="img/AS.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Geologica" />
     <title>Andrew Sacher</title>
     <!-- Google tag (gtag.js) -->
     <script
@@ -38,10 +41,10 @@
           <br /><br />
           <span>
             I'm a music and culture writer currently living in New York and a
-            Senior Editor at
+            Senior Editor and podcast host at
             <a href="https://www.brooklynvegan.com" target="_blank"
               >BrooklynVegan</a
-            >.
+            >
           </span>
         </div>
       </div>
