--- a/work.html
+++ b/work.html
@@ -5,6 +5,22 @@
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <title>Andrew Sacher - Work</title>
     <link rel="icon" type="image/x-icon" href="img/AS.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Geologica" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WJRW9C2ZX8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-WJRW9C2ZX8');
+    </script>
   </head>
   <body>
     <div class="nav">
@@ -29,12 +45,16 @@
           href="https://www.brooklynvegan.com/tags/in-defense-of-the-genre"
           target="_blank">
           In Defense of the Genre</a
-        >. <br /><br />
-        <!-- <span class="title">Other Highlights</span>
+        >.
         <br />
-        <br /> -->
+        <br />
+        And check out more of my interviews on
+        <a href="https://brooklynvegan.podbean.com/" target="_blank">
+          The BrooklynVegan Podcast</a
+        >. <br /><br />
+        <br /><br />
         <div class="link-list">
-          <span class="sub-title">Interviews/Features</span><br /><br />
+          <span class="sub-title">Interviews / Features</span><br /><br />
           <span>
             <a
               href="https://www.brooklynvegan.com/bad-brains-interview-darryl-jenifer-discusses-the-bands-classic-80s-records/"
@@ -163,6 +183,7 @@
           <br />
           <br />
           <br /><br />
+          <br />
           <span class="sub-title">Album Retrospectives</span><br /><br />
           <span>
             <a
@@ -193,7 +214,8 @@
             <a
               href="https://www.brooklynvegan.com/box-car-racer-turns-20-a-look-back-on-blink-182s-crucial-post-hardcore-side-project/"
               target="_blank">
-              Box Car Racer turns 20: a look back on blink-182's crucial post-hardcore side project
+              Box Car Racer turns 20: a look back on blink-182's crucial
+              post-hardcore side project
             </a>
           </span>
           <br /><br />
@@ -225,7 +247,8 @@
             <a
               href="https://www.brooklynvegan.com/blink-182s-take-off-your-pants-and-jacket-turns-20-the-tense-turning-point-of-their-peak-era/"
               target="_blank">
-              blink-182's 'Take Off Your Pants and Jacket' turns 20 - the tense turning point of their peak era
+              blink-182's 'Take Off Your Pants and Jacket' turns 20 - the tense
+              turning point of their peak era
             </a>
           </span>
           <br /><br />
@@ -310,7 +333,8 @@
           </span>
           <br /><br />
           <br /><br />
-          <span class="sub-title">Other Articles/Lists</span><br /><br />
+          <br />
+          <span class="sub-title">Other Articles / Lists</span><br /><br />
           <span>
             <a
               href="https://www.brooklynvegan.com/ska-is-thriving-right-now-heres-a-look-at-the-diy-scene-thats-keeping-it-alive/"
@@ -378,24 +402,35 @@
           <br />
           <br />
           <br /><br />
-
-          <span class="sub-title">Audio/Video</span><br /><br />
-
-          <!-- <span>
-          <a
-            href="https://www.brooklynvegan.com/tags/vans-channel-66/"
-            target="_blank"
-          >
-            Vans Channel 66
-          </a>
-        </span>
-        <br /><br /> -->
+          <br />
+          <span class="sub-title">Audio / Video</span><br /><br />
           <span>
             <a href="https://brooklynvegan.podbean.com/" target="_blank">
               The BrooklynVegan Show Podcast
             </a>
           </span>
           <br /><br />
+          <div class="vans-show">
+            <img src="img/vans.png" alt="BrooklynVegan Vans Channel 66" />
+            <br />
+            <span>
+              Interview with
+              <a
+                href="https://www.brooklynvegan.com/this-week-on-our-ch-66-show-a-sonic-youth-deep-dive-with-lee-ranaldo/"
+                target="_blank"
+                >Lee Ranaldo</a
+              >
+              on
+              <a
+                href="https://www.brooklynvegan.com/tags/vans-channel-66/"
+                target="_blank">
+                Vans Channel 66</a
+              >
+              (8/12/21)
+            </span>
+          </div>
+          <br />
+          <br />
         </div>
       </div>
     </div>
