--- a/work.html
+++ b/work.html
@@ -410,6 +410,14 @@
             </a>
           </span>
           <br /><br />
+          <span>
+            <a
+              href="https://www.youtube.com/watch?v=yyYDOxqmyM4&t=1s&ab_channel=BrooklynVegan"
+              target="_blank">
+              Ska Lives! The Continued Legacy of American Ska
+            </a>
+          </span>
+          <br /><br />
           <div class="vans-show">
             <img src="img/vans.png" alt="BrooklynVegan Vans Channel 66" />
             <br />
@@ -431,7 +439,71 @@
           </div>
           <br />
           <br />
+          <br /><br />
+          <span class="sub-title">Podcast Appearances</span><br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/6WOMdf2PuiRGiBhO1N2L3V?si=730bbc37ecfe42c4"
+              target="_blank">
+              In Defense of Ska
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/2G9nOPipClkmSK2H6wjhvp?si=86a6317ca5564653"
+              target="_blank">
+              Endless Scroll
+            </a>
+          </span>
+          <br /><br />
+
+          <span>
+            <a
+              href="https://open.spotify.com/episode/6EjeVttmxZR6LeLVPTLMu6?si=c0d5e8f200c4470f"
+              target="_blank">
+              Ska Punk International
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/2x7xSRibttWCdb92ewpzBa?si=ad138c76b48f494c"
+              target="_blank">
+              Ska Boom
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/3I7hRpwwjKYGhVDX7MXLYA?si=fadd1191dc1a41f3"
+              target="_blank">
+              The Pitch of Discontent</a
+            >
+            (blink-182's untitled 20th anniversary episode)
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/2nrERVwiDGVuUDSrUqDXFo?si=d9a1f340a20a4496"
+              target="_blank">
+              Sunday Conversations
+            </a>
+          </span>
+          <br /><br />
+          <span>
+            <a
+              href="https://open.spotify.com/episode/0hQe7J4NOiubP6mKBnAVL9?si=9f892e9c723f40f1"
+              target="_blank">
+              Washed Up Emo
+            </a>
+          </span>
+          <br /><br />
         </div>
+        <br />
+        <br />
+        <br /><br />
+        <br />
       </div>
     </div>
   </body>
