--- a/work.html
+++ b/work.html
@@ -32,6 +32,7 @@
       </div>
     </div>
     <div class="container">
+      <div class="container__wrapper">
       <div class="text-container">
         You can find much of my writing on BrooklynVegan in my weekly album
         reviews column
@@ -53,7 +54,8 @@
           The BrooklynVegan Podcast</a
         >. <br /><br />
         <br /><br />
-        <div class="link-list">
+        </div>
+        <div class="text-container">
           <span class="sub-title">Interviews / Features</span><br /><br />
           <span>
             <a
@@ -184,12 +186,14 @@
           <br />
           <br /><br />
           <br />
+          </div>
+        <div class="text-container">
           <span class="sub-title">Album Retrospectives</span><br /><br />
           <span>
             <a
               href="https://www.brooklynvegan.com/beach-boys-albu/"
               target="_blank">
-              The Beach Boys Albums ranked
+              The Beach Boys albums ranked
             </a>
           </span>
           <br /><br />
@@ -334,6 +338,8 @@
           <br /><br />
           <br /><br />
           <br />
+                    </div>
+        <div class="text-container">
           <span class="sub-title">Other Articles / Lists</span><br /><br />
           <span>
             <a
@@ -403,6 +409,8 @@
           <br />
           <br /><br />
           <br />
+                    </div>
+        <div class="text-container">
           <span class="sub-title">Audio / Video</span><br /><br />
           <span>
             <a href="https://brooklynvegan.podbean.com/" target="_blank">
@@ -440,6 +448,8 @@
           <br />
           <br />
           <br /><br />
+                    </div>
+        <div class="text-container">
           <span class="sub-title">Podcast Appearances</span><br /><br />
           <span>
             <a
@@ -499,6 +509,7 @@
             </a>
           </span>
           <br /><br />
+        </div>
         </div>
         <br />
         <br />
