--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <link rel="icon" type="image/x-icon" href="img/AS.ico">
@@ -24,7 +25,7 @@
   </head>
   <body>
     <div class="nav">
-      <span class="nav-title"><a href="index.html">Andrew Sacher</a></span>
+      <span class="nav-title"><a href="/">Andrew Sacher</a></span>
       <div class="nav-links">
         <a href="about.html">About</a>
         <a href="work.html">Work</a>
