--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/work.css" />
     <title>Andrew Sacher - Work</title>
@@ -24,7 +25,7 @@
   </head>
   <body>
     <div class="nav">
-      <span class="nav-title"><a href="index.html">Andrew Sacher</a></span>
+      <span class="nav-title"><a href="/">Andrew Sacher</a></span>
       <div class="nav-links">
         <a href="about.html">About</a>
         <a href="">Work</a>
